# gteditor

./: AUTHORS  autogen.sh  configure.ac
doc/: Doxyfile  Makefile.am
m4/: ax_check_boost.m4  ax_find_file.m4
src/: .kdbgrc.livecast-monitor  Configuration.cc  Configuration.hh  GTEditor.cc  Makefile.am  doxygen_dummy.hh
src/gui/: Configuration.cc  Configuration.hh  MainWindow.cc  MainWindow.hh  Makefile.am  Sheet.cc  Sheet.hh  Staff.cc  Staff.hh  Util.cc  Util.hh
src/lib/: Log.cc  Log.hh  Makefile.am
tests/: Makefile.am  test_sheet.cc  test_staff.cc
